<resources>
    <string name="app_name">ActividadAndroid</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="tel_fono">Teléfono</string>
    <string name="direcci_n">Dirección</string>
    <string name="rut">Rut</string>
    <string name="complete_el_siguiente_formulario">Complete el siguiente formulario.</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="edad">Edad</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="enviar">Enviar</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="todo">TODO</string>
</resources>